# dc_image_builder

./: .gitignore  Pipfile  README.md  cdk_app.py  package-lock.json  package.json  pyproject.toml  settings.json
.circleci/: config.yml
components/22.04/: install_apt_packages.yml  install_codedeploy_agent.yml  install_nginx.yml  install_python3.yml  output-on-error.yml  ubuntu_upgrades.yml
components/22.04/shared/: app_user.yml
components/24.04/: install_apt_packages.yml  install_codedeploy_agent.yml  install_python3.yml  ubuntu_upgrades.yml
lambda/update_base_images/: github.py  index.py  pyproject.toml  requirements.txt
scripts/: lambda-requirements.sh
stacks/: base_image_updater.py  dc_image_builder.py  new_dc_image_actions.py
